# reportlab_enhanced

./: .gitignore  .hg_archival.txt  CHANGES.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  VERSION.txt  pyproject.toml  setup.py
.github/workflows/: build-userguide.yml  release.yml
docs/i18n/: __init__.py  en.py  zh_CN.py
docs/source/: conf.py
docs/userguide/: ch2a_fonts.py  genuserguide.py
docs/userguide/zh-CN/: app_demos.py  ch1_intro.py  ch2_graphics_1.py  ch2_graphics_2.py  ch2_graphics_3.py  ch2a_fonts_1.py  ch2a_fonts_2.py  ch3_pdffeatures_1.py  ch3_pdffeatures_2.py  ch4_platypus_concepts.py  ch5_paragraphs.py  ch6_tables_1.py  ch6_tables_2.py  ch7_custom.py  graph_charts_1.py  graph_charts_2.py  graph_charts_3.py  graph_concepts.py  graph_intro.py  graph_shapes.py  graph_widgets.py
docs/userguide_web/: README.md  build.py  mkdocs.yml  py2md.py  pyproject.toml
openspec/changes/archive/2026-04-23-ttfont-fallback/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-ttfont-fallback/specs/ttfont-fallback-api/: spec.md
openspec/changes/archive/2026-04-24-check-docs-i18n/: design.md  proposal.md  tasks.md
openspec/specs/chapter-splitting/: spec.md
project-doc/plan/: 2026-04-22-font-fallback.md
project-doc/plan/2026-04-22-font-fallback/: implementation.md
project-doc/reference/: building-docs.md  cicd-workflow.md  docs-structure.md  publishing.md  setup-explained.md  testing.md
src/reportlab/: __init__.py  rl_settings.py
src/reportlab/graphics/: renderPM.py  renderPS.py  utils.py
src/reportlab/lib/: rl_accel.py
src/reportlab/pdfbase/: pdfmetrics.py  ttfonts.py
src/reportlab/pdfgen/: textobject.py
tests/: _ttfont_fallback_helpers.py  test_pdfbase_ttfont_fallback.py  test_ttfont_fallback_api.py  test_ttfont_fallback_core.py  test_ttfont_fallback_multiscript.py  test_ttfont_fallback_pdf.py
tests_resource/: README.md
tools/docco/: rl_doc_utils.py  rltemplate.py
(+3 files in other folders)
