[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reportlab-enhanced"
version = "4.4.10"
description = "The ReportLab Toolkit (Enhanced Fork)"
readme = "README.md"
license = {text = "BSD license (see LICENSE for details), Copyright (c) 2025-2026 selcarpa, Copyright (c) 2000-2024 ReportLab Inc."}
requires-python = ">=3.9,<4"
authors = [
    {name = "selcarpa", email = "selcarpa@gmail.com"},
    {name = "Andy Robinson"},
    {name = "Robin Becker"},
    {name = "the ReportLab team and the community"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Printing",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pillow>=9.0.0",
    "charset-normalizer",
]

[project.urls]
Homepage = "https://github.com/selcarpa/reportlab_enhanced"
Documentation = "https://selcarpa.github.io/reportlab_enhanced/"
Repository = "https://github.com/selcarpa/reportlab_enhanced"
Changelog = "https://github.com/selcarpa/reportlab_enhanced/releases"

[project.optional-dependencies]
accel = ["rl_accel>=0.9.0,<1.1"]
renderpm = ["rl_renderPM>=4.0.3,<4.1"]
pycairo = ["rlPyCairo>=0.2.0,<1", "freetype-py>=2.3.0,<2.4"]
bidi = ["rlbidi"]
shaping = ["uharfbuzz"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["reportlab*"]

[tool.setuptools.package-data]
"reportlab" = [
    "fonts/*.txt",
    "fonts/*.ttf",
    "fonts/*.afm",
    "fonts/*.pfb",
    "fonts/*.sfd",
    "graphics/barcode/*",
    "license.txt",
]
